fix: correct contrast errors

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 $navbar: #24292E;
 $main-text: #24292E;
 
-$post-category: #3eb0ef;
-$date: #90a2aa;
+$post-category: #4C6ED1;
+$date: #5B7A81;
